tests/rosetta/out/Java/catalan-numbers-1.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// catalan-numbers-1.mochi
public class CatalanNumbers1 {
    static int binom(int n, int k) {
        if (k < 0 || k > n) {
            return 0;
        }
        int kk = k;
        if (kk > n - kk) {
            kk = (int)(n - kk);
        }
        int res = 1;
        int i = 0;
        while (i < kk) {
            res = (int)((res * (n - i)));
            i = (int)(i + 1);
            res = (int)(Integer.parseInt((res / i)));
        }
        return res;
    }
    static int catalan(int n) {
        return Integer.parseInt((binom(2 * n, n) / (n + 1)));
    }
    static void main() {
        for (int i = 0; i < 15; i++) {
            System.out.println(String.valueOf(catalan(i)));
        }
    }
    public static void main(String[] args) {
        main();
    }
}
